package at.htl.eventmanager.entity;

public class Animal {
}
