package at.htl.eventmanager.entity;

public class Staff {
}
